# waterstick

./: .gitignore  ADAPTIVE_SMOOTHING_DESIGN.md  ALLPASS_SMOOTHING_ANALYSIS.md  BUILD_GUIDE.md  CLAUDE.md  CMakeLists.txt  ENHANCED_SMOOTHER_README.md  ENHANCED_SMOOTHING_PLAN.md  FEEDBACK_SEND_MOCKUP.md  ISSUES.md  OPTIMIZATION_SUMMARY.md  PERCEPTUAL_VELOCITY_DESIGN.md  PHASE_1_COMPLETION_REPORT.md  PHASE_2_IMPLEMENTATION_REPORT.md  PHASE_3_EXECUTIVE_SUMMARY.md  PHASE_3_VALIDATION_REPORT.md  PITCH_ACCURACY_ANALYSIS.md  PROGRESS.md  README.md  TAP_CORRELATION_ANALYSIS_REPORT.md  VSTGUI_Rendering_Analysis.md  allpass_smoothing_analysis.py  analyze_tap_correlation.py  detailed_clustering_analysis.py  layout-guide.md  macro_context.md  macro_knob.md  macro_sync_test_results.md  performance_test.py  phase3_comprehensive_validation.cpp  phase3_validation_makefile  phase3_validation_report.txt  phase3_validation_simplified.cpp  phase3_validation_test  pitch_accuracy_verification.cpp  pitch_dropout_test_report.txt  pitch_verification  routing_test_config.txt  routing_test_script.py  serial_processing_design.md  (+4 more)
.claude/: settings.local.json
.claude/agents/: claude-md-maintainer.md
resources/: Info.plist.in  WaterStick.entitlements
source/WaterStick/: AdaptiveSmoother.cpp  AdaptiveSmoother.h  CascadedSmoother.cpp  CascadedSmoother.h  CombProcessor.cpp  CombProcessor.h  ControlFactory.cpp  ControlFactory.h  DecoupledArchitectureAnalysis.md  DecoupledDelayArchitecture.cpp  DecoupledDelayArchitecture.h  DecoupledIntegrationGuide.md  DecoupledSystemTest.cpp  EnhancedAdaptiveSmoother.cpp  EnhancedAdaptiveSmoother.h  OptimizationGuide.md  PerceptualVelocityDetector.cpp  PerceptualVelocityDetector.h  RealTimeOptimizer.cpp  RealTimeOptimizer.h  SafetyOptimizer.cpp  SafetyOptimizer.h  ThreeSistersFilter.cpp  ThreeSistersFilter.h  WaterStickCIDs.h  WaterStickController.cpp  WaterStickController.h  WaterStickEditor.cpp  WaterStickEditor.h  WaterStickLogger.h  WaterStickParameters.h  WaterStickProcessor.cpp  WaterStickProcessor.cpp.backup  WaterStickProcessor.h  factory.cpp  moduleentry.cpp  version.h
